--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Monitorar Finanças</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6096122672306144"
-    crossorigin="anonymous"></script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6096122672306144" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container mt-5">
